Archive2/ed/e88580bf9530c7/output
main.cpp:13:18: error: use of undeclared identifier 'a'
    std::memset(&a, 0, sizeof(a));
                 ^
1 error generated.
